DigIt CHANGE LOG
======================

2025/06/06 Separated the profile menu into a new ToolButton

        05 Changed Profile List Item Name;
           Added Profiles Reorder;

        04 Replaced IDigIt_Settings.Path_XXX functions with a single function Path;
           Added Profiles Edit Form (to finish);

2025/05/29 Added XMLRoot_Path and XML_File param to Load/Save Source;
           Load Last Used Source at Startup;
           Save Last Used Source when User Select;
           Changed const File_Options to File_Config;
           Removed selectedProfile var;

        28 Renamed Unit DigIt_Counters;
           Moved TDigIt_Settings in a new Unit DigIt_Settings;
           Moved MainForm CFG_Load/Save methods to TDigIt_Settings;
           Added Select and Save with XML Params in TDigIt_Sources and
           Use of it in MainForm SES_Load/SaveSource;

        27 Solved Cancel Closing Erase AutoSave;
           Updated Languages

        26 Added IsAutoSave in LoadSession;
           Clear AutoSaved Files when Close and User do not save Session;
           Asks user whether to read a session's autosave if date\time is greater;

        22 Added Profiles Menu Item;
           Moved PhysicalSizeConvert from BGRABitmap  (see argument about this on github);

        14 Renamed XML_ methods;
           Added Profiles Array and file;

        12 Added Select Source sub Items in Bridge and WIA Source;
           Added Sub Items in BuildSourcesMenu and MainForm;

        09 First Tests for Source Sub Items

	08 Save of Opened Session in Config File;
           Changed Default Session Path;
           Added UI_Caption method;

        06 ResizeImage use of ConvertSizeToResolutionUnit renamed function and HalfUp

2025/04/30 Added SourceFiles_Add StartIndex param;
           Fixed ReTake bugs in CustomMode;
           Added Open .digs File in FormShow;
           Release of 0.2 beta;

        29 Changed Counter Value to DWord;